# makyoh

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  LICENSE.txt  Makefile  Menu.cpp  Menu.h  README.md  Rect.cpp  Rect.h  bunny.mtl  gg.cpp  grid.cvx  light_map.cvx  makyoh.cpp  makyoh.sln  makyoh.vcxproj  makyoh.vcxproj.filters  makyoh_config.json  mirror.frag  mirror.vert  plane.mtl  receiver.frag  receiver.vert  resource.h  wall.mtl
INSTALL/: INSTALL.vdproj
images/: desktop.ini  light_map.cvx  makyoh.cvx
makyoh.xcodeproj/: project.pbxproj
makyoh.xcodeproj/xcshareddata/xcschemes/: makyoh.xcscheme
